# carpix

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-storage-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-database-layer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-wikimedia-client/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md
.planning/phases/05-service-orchestration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-REVIEW.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
alembic/: env.py
alembic/versions/: 0001_create_vehicle_images.py
src/carpix_images/: config.py  main.py
tests/: conftest.py
tests/integration/: test_cache_repository.py  test_images_router.py
tests/unit/: test_health.py  test_image_service.py  test_normalize.py  test_storage.py  test_validate.py  test_wikimedia.py
(+19 files in other folders)
